<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/id_appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/id_search_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/white_shape_bg"
                    android:drawableLeft="@mipmap/ic_search"
                    android:drawablePadding="10dp"
                    android:hint="@string/search_hint"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textColor="@color/black_light" />

                <Button
                    android:id="@+id/id_search_button"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/search_cancel"
                    android:textColor="@android:color/white" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ListView
        android:id="@+id/id_search_result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/id_empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/empty_result"
        android:visibility="gone" />

</LinearLayout>