<?xml version="1.0" encoding="utf-8"?>
<com.yalantis.phoenix.PullToRefreshView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_pull_to_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:background="@drawable/sky"
                android:padding="16dp">

                <TextView
                    android:id="@+id/id_current_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/super_text_size" />

                <TextView
                    android:id="@+id/id_city_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/id_current_temp"
                    android:layout_alignRight="@id/id_current_temp"
                    android:layout_below="@id/id_current_temp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/small_text_size" />

                <ImageButton
                    android:id="@+id/id_menu"
                    style="?buttonBarButtonStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_point" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/aqi"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/id_weather_aqi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/medium_text_size" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="20dp"
                        android:background="@android:color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/wind_direction"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/id_wind_direction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/medium_text_size" />
                    </LinearLayout>

                    <View
                        android:layout_width="0.5dp"
                        android:layout_height="20dp"
                        android:background="@android:color/white" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:text="@string/wind_power"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/id_wind_power"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/medium_text_size" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/id_weather_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextViewStyle"
                            android:text="@string/today"
                            android:textSize="@dimen/medium_text_size" />

                        <TextView
                            android:id="@+id/id_week"
                            style="@style/TextViewStyle"
                            android:layout_marginLeft="10dp"
                            android:textSize="@dimen/small_text_size" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/id_weather_type"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="2dp"
                        android:textSize="@dimen/thin_text_size" />

                    <TextView
                        android:id="@+id/id_date"
                        style="@style/TextViewStyle"
                        android:layout_marginTop="2dp"
                        android:textSize="@dimen/small_text_size" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id_high_temp"
                        style="@style/TextViewStyle"
                        android:textSize="@dimen/large_text_size" />

                    <TextView
                        style="@style/TextViewStyle"
                        android:text="@string/slash"
                        android:textSize="@dimen/medium_text_size" />

                    <TextView
                        android:id="@+id/id_low_temp"
                        style="@style/TextViewStyle"
                        android:textSize="@dimen/medium_text_size" />

                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/layout_divider" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="未来四天天气" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/id_forecast_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <include layout="@layout/layout_divider" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="过去五天天气" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/id_history_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <include layout="@layout/layout_divider" />

            <LinearLayout
                android:id="@+id/id_index_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
    </ScrollView>
</com.yalantis.phoenix.PullToRefreshView>
